CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(PROGRAM_NAME container_sample)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

PROJECT(${PROGRAM_NAME})

ADD_EXECUTABLE(${PROGRAM_NAME} container_sample.cpp)

TARGET_INCLUDE_DIRECTORIES(${PROGRAM_NAME} PUBLIC ../messaging_system/utilities)
TARGET_INCLUDE_DIRECTORIES(${PROGRAM_NAME} PUBLIC ../messaging_system/container)

ADD_DEPENDENCIES(${PROGRAM_NAME} container)
TARGET_LINK_LIBRARIES(${PROGRAM_NAME} PUBLIC container)